
- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 15
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta15

New Commands:

- Standard Windows: "set_window_pos" now works for standard windows #146
- Standard Windows: "get_window_pos" now works for standard windows #146
- Standard Windows: "set_item_height" now works for standard windows #146
- Standard Windows: "set_item_width" now works for standard windows #146
- Standard Windows: "get_item_height" now works for standard windows #146
- Standard Windows: "get_item_width" now works for standard windows #146

Fixes:

- Main Window: Fixed set_window_size bug for MacOs/Linus #143


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 14
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta14

Fixes:

- Data Source: Fixed seg faults related to data source #127
- Debug Window: Fixed item deletion crash #128
- Debug Window: Fixed debug item names #107

Breaking Changes:

- Table Widget: Removed data source from table widget


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 13
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta13

Fixes:

- Images: Fixed memory leaks for image textures #122
- Other:  Fixed stop_dearpygui command #102
- Labels:  Fixed issue with set_label the same #120

New Commands:

- Widgets: add "does_item_exist" command #119
- Widgets: add "get_item_children" command #123
- Widgets: add "get_all_items" command #123
- Widgets: add "get_windows" command #123